# agentforge

./: .gitignore  .vercelignore  README.md  package-lock.json  package.json  vercel.json
contracts/: Cargo.toml
contracts/agentforge-marketplace/: Cargo.toml  Odra.toml
contracts/agentforge-marketplace/src/: lib.rs  marketplace.rs
contracts/agentforge-marketplace/wasm/: AgentForgeMarketplace.wasm
contracts/agentforge-reputation/: Cargo.toml  Odra.toml
contracts/agentforge-reputation/src/: lib.rs  reputation.rs
contracts/agentforge-reputation/wasm/: AgentForgeReputation.wasm
scripts/: deploy-contracts.sh
src/app/: globals.css  layout.tsx  page.tsx
src/app/agents/: page.tsx
src/app/agents/[id]/: page.tsx
src/app/api/agents/: route.ts
src/app/api/bids/: route.ts
src/app/api/tasks/: route.ts
src/app/api/x402/execute/: route.ts
src/app/my/agent/: page.tsx
src/app/my/tasks/: page.tsx
src/app/tasks/: page.tsx
src/app/tasks/[id]/: page.tsx
src/app/tasks/new/: page.tsx
src/components/layout/: Navbar.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  CsprAmount.tsx
src/lib/: mock-data.ts  utils.ts
src/lib/casper/: cloud.ts  transactions.ts
src/lib/claude/: agent.ts
src/lib/x402/: index.ts
src/providers/: CsprClickProvider.tsx  CsprDesignProvider.tsx
src/store/: index.ts
src/types/: cspr-design.d.ts  index.ts
